229		C++			National Values
230		C++			Avoid army and state ID collisions
231		C++			Move start date to 31.12.1835 so pops have the opportunity to develop issues before first election.
232		C++			Tweak parser grammar to allow empty objects (like many V2 unit-name counters)
233		C++			Don't generate pops with size < 1.  Correct pop RGO employment indices.  Modify output order to be more like V2.
234		C++			Match output order more closely to V2 saves to make comparisons easier.
235		C++			Culture mapping changes: give Sami, Ukrainian, Ugrian, Pashtun, Baluchi, and Malagasy correct mappings; move Papuan from Polynesian to Melanesian.
236		C++			Add starting factories.
237		C++			Apply diminishing-returns scaling to manufactory bonus for starting factories.
238		C++			Convert starting financials (treasury, loans, etc)
239		C++			Added forgotten files
240		C++			Fix regression in accepted culture mapping
241		C++			Fix parsing of dates with non-four-digit years (i.e. 1.1.1)
242		C++			Convert diplomats to diplomacy points (1:2)
243		C++			Tweaks to southern Arabia province mappings
244		C++			Implement some pop creation rules that existed only in comments
245		C++			Switch the parser from ASCII to ISO 8859-1.  Fixes parsing of commerce_inventions.txt.
246		C++			Convert infamy (scaled against limit).
247		C++			Convert admirals/explorers and generals/conquistadors
248		C++			Assign converted military leaders to their converted armies/navies
249		C++			Provinces with high-level EU3 forts or shipyards get level 1 V2 forts or shipyards
250		C++			Assign slightly more reasonable starting cash reserves for pops
251		C++			Put some small starting reserves in the national bank (bigger with the national bank NI)
252		C++			More changes to pops. A few bureaucrats for everyone.
					Many fewer officers and somewhat fewer soldiers. Allow some NIs a small influence on pop generation.
253		C++			Fix a few project file problems (if you've had trouble building, rebuild all)