@@ -273,3 +273,4 @@ Revision	Version Updated		Log Message
 252		C++			More changes to pops. A few bureaucrats for everyone.
 					Many fewer officers and somewhat fewer soldiers. Allow some NIs a small influence on pop generation.
 253		C++			Fix a few project file problems (if you've had trouble building, rebuild all)
+254		C++			Simplify parser leaf rules and improve parser debugging.
